# AliRoot

ALIROOT/: aliroot.cxx
ANALYSIS/ANALYSIS/: AliAnalysisManager.cxx  AliAnalysisManager.h
ANALYSIS/ANALYSISalice/: AliAnalysisTaskPIDResponse.cxx  AliPIDResponseInputHandler.cxx  AliVZEROEPSelectionTask.cxx
HLT/TPCLib/: CMakeLists.txt
STEER/ESD/: AliESDTrdTrigger.cxx  AliESDTrdTrigger.h
STEER/STEERBase/: AliDataFile.cxx  AliDataFile.h  AliOADBContainer.cxx  AliOADBContainer.h  AliPIDCombined.cxx  AliPIDResponse.cxx  AliPIDResponse.h  AliTPCPIDResponse.cxx
TPC/: CMakeLists.txt
TRD/TRDbase/: AliTRDReconstructor.cxx  AliTRDReconstructor.h  AliTRDclusterizer.cxx  AliTRDclusterizer.h  AliTRDmcmSim.cxx  AliTRDrawData.cxx  AliTRDrawData.h
test/: CMakeLists.txt
